welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
baisseBrosse();
def methode(){
	if(estFaceMur){
		if(getDirection()==Direction.OUEST){
			droite();
			if(estFaceMur){
				return true
			}
		}else{
			gauche();
			if(estFaceMur){
				return true
			}
		}
	}
}
while(!methode){
	avance();
}
}
